# vtkwriters

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.rst  check_git_tag_against_version.py  setup.cfg  setup.py
test/: bulk.py  test_polyhedron.py  test_vtr.py  test_vts.py  test_zmap.py  two_triangles.py
vtkwriters/: __init__.py  _vtkwriters.py
