[metadata]
name = vtkwriters
version = attr: vtkwriters.__version__
description = A set of routines to write KitWare VTK/Paraview files.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Simon Lopez
author_email = s.lopez@brgm.fr
url = https://github.com/BRGM/vtkwriters
download_url = https://github.com/BRGM/vtkwriters/tarball/master
keywords = vtk, paraview

[options]
packages = vtkwriters
include_package_data = False
zip_safe = True
install_requires =
	numpy >= 1.17

[options.packages.find]
exclude = test
